@@ -1785,6 +1785,9 @@ g_slist_pop_allocator
 GQueue
 g_queue_new
 g_queue_free
+G_QUEUE_INIT
+g_queue_init
+g_queue_clear
 g_queue_is_empty
 g_queue_get_length
 g_queue_reverse
