@@ -40,10 +40,14 @@ struct _GQueue
   guint  length;
 };
 
+#define G_QUEUE_INIT { NULL, NULL, 0 }
+
 /* Queues
  */
 GQueue*  g_queue_new            (void);
 void     g_queue_free           (GQueue           *queue);
+void     g_queue_init           (GQueue           *queue);
+void     g_queue_clear          (GQueue           *queue);
 gboolean g_queue_is_empty       (GQueue           *queue);
 guint    g_queue_get_length     (GQueue           *queue);
 void     g_queue_reverse        (GQueue           *queue);
